--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,26 @@
         <maven.surefire.plugin.version>2.19.1</maven.surefire.plugin.version>
     </properties>
 
+    <modules>
+        <module>mavenTesting-domain</module>
+        <module>mavenTesting-service-impl</module>
+    </modules>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>se.sofiamontgomery</groupId>
+                <artifactId>mavenTesting-domain</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>se.sofiamontgomery</groupId>
+                <artifactId>mavenTesting-service-impl</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <build>
         <resources>
             <resource>
