--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,10 @@
         <maven.plugin.plugin.version>3.2</maven.plugin.plugin.version>
         <maven.resources.plugin.version>3.0.1</maven.resources.plugin.version>
         <maven.surefire.plugin.version>2.19.1</maven.surefire.plugin.version>
+
+        <!-- version -->
+        <junit.version>4.13.1</junit.version>
+
     </properties>
 
     <modules>
@@ -41,6 +45,15 @@
                 <artifactId>mavenTesting-service-impl</artifactId>
                 <version>1.0-SNAPSHOT</version>
             </dependency>
+
+            <!-- https://mvnrepository.com/artifact/junit/junit -->
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>4.13.1</version>
+                <scope>test</scope>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
