--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
     <modules>
         <module>mavenTesting-domain</module>
         <module>mavenTesting-service-impl</module>
+        <module>mavenTesting-test</module>
     </modules>
 
     <dependencyManagement>
@@ -50,7 +51,7 @@
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
-                <version>4.13.1</version>
+                <version>${junit.version}</version>
                 <scope>test</scope>
             </dependency>
 
