--- a/mavenTesting-test/mavenTesting-test-unit/pom.xml
+++ b/mavenTesting-test/mavenTesting-test-unit/pom.xml
@@ -14,6 +14,13 @@
     <packaging>jar</packaging>
 
     <dependencies>
+        <!-- projects -->
+        <dependency>
+            <groupId>se.sofiamontgomery</groupId>
+            <artifactId>mavenTesting-domain</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
