--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>se.sofiamontgomery</groupId>
     <artifactId>mavenTesting</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
