added interface ForrestService and edited pom-files

--- a/mavenTesting-service-impl/pom.xml
+++ b/mavenTesting-service-impl/pom.xml
@@ -18,6 +18,10 @@
             <groupId>se.sofiamontgomery</groupId>
             <artifactId>mavenTesting-domain</artifactId>
         </dependency>
+        <dependency>
+            <groupId>se.sofiamontgomery</groupId>
+            <artifactId>mavenTesting-service</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
