--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,11 @@
                 <artifactId>mavenTesting-service-impl</artifactId>
                 <version>1.0-SNAPSHOT</version>
             </dependency>
+            <dependency>
+                <groupId>se.sofiamontgomery</groupId>
+                <artifactId>mavenTesting-service</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
 
             <!-- https://mvnrepository.com/artifact/junit/junit -->
             <dependency>
