--- a/pom.xml
+++ b/pom.xml
@@ -26,8 +26,7 @@
 
         <!-- version -->
         <junit.version>4.13.1</junit.version>
-        <spring-beans.version>5.3.13</spring-beans.version>
-        <spring-core.version>5.3.14</spring-core.version>
+        <spring.version>5.3.13</spring.version>
 
     </properties>
 
@@ -64,6 +63,13 @@
                 <scope>test</scope>
             </dependency>
 
+            <!-- https://mvnrepository.com/artifact/org.springframework/spring-aop -->
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-aop</artifactId>
+                <version>5.3.13</version>
+            </dependency>
+
             <!-- https://mvnrepository.com/artifact/org.springframework/spring-beans -->
             <dependency>
                 <groupId>org.springframework</groupId>
@@ -75,8 +81,24 @@
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-core</artifactId>
-                <version>5.3.14</version>
+                <version>5.3.13</version>
             </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-context</artifactId>
+                <version>5.3.13</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-expressions</artifactId>
+                <version>5.3.13</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-jcl</artifactId>
+                <version>5.3.13</version>
+            </dependency>
+
 
 
 
