--- a/mavenTesting-test/mavenTesting-test-unit/pom.xml
+++ b/mavenTesting-test/mavenTesting-test-unit/pom.xml
@@ -22,10 +22,25 @@
         </dependency>
 
         <dependency>
+            <groupId>se.sofiamontgomery</groupId>
+            <artifactId>mavenTesting-service</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <!-- junit -->
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <!-- spring -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
     </dependencies>
 
 </project>
