--- a/mavenTesting-test/mavenTesting-test-unit/pom.xml
+++ b/mavenTesting-test/mavenTesting-test-unit/pom.xml
@@ -27,6 +27,12 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>se.sofiamontgomery</groupId>
+            <artifactId>mavenTesting-service-impl</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
         <!-- junit -->
         <dependency>
             <groupId>junit</groupId>
